// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callout component renders a message 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  />
  <p
    className="callout-message message"
  >
    This is a message
  </p>
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    />
  </div>
</div>
`;

exports[`callout component renders a title 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  >
    This is a title
  </h1>
  <p
    className="callout-message message"
  />
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    />
  </div>
</div>
`;

exports[`callout component renders one button 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  />
  <p
    className="callout-message message"
  />
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    >
      <button
        autoFocus={false}
        className="LargeInversePrimaryButton  "
        disabled={undefined}
        formTarget="_self"
        id={undefined}
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Single Button
      </button>
    </div>
  </div>
</div>
`;

exports[`callout component renders two buttons 1`] = `
<div
  className="callout callout"
>
  <h1
    className="callout-title title"
  />
  <p
    className="callout-message message"
  />
  <div
    className="callout-buttons buttonContainer"
  >
    <div
      className="callout-button button"
    >
      <button
        autoFocus={false}
        className="LargeInversePrimaryButton  "
        disabled={undefined}
        formTarget="_self"
        id={undefined}
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        First Button
      </button>
      <button
        autoFocus={false}
        className="LargeInversePrimaryButton  "
        disabled={undefined}
        formTarget="_self"
        id={undefined}
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Second Button
      </button>
    </div>
  </div>
</div>
`;
